--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v8.3.6,
-* Autoprefixer: v10.3.1
-* Browsers: > 2% and last 1 version
-*/
-
 @font-face {
   font-family: "PT Sans";
   font-style: normal;
@@ -198,7 +191,7 @@ img {
   line-height: 20px;
   color: #ffffff;
   background-color: #756257;
-  min-width: 160px;
+  width: 160px;
   min-height: 37px;
   text-align: center;
   padding: 9px 15px;
@@ -430,7 +423,7 @@ img {
   color: #ffffff;
   background-color: #83b3fa;
   background-image: url("../images/mountain-footer.jpg");
-  background-size: 100% auto;
+  background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
   padding: 94px 200px;
@@ -486,6 +479,18 @@ img {
   outline: #ff5757 solid 2px;
 }
 
+.field:disabled {
+  opacity: 70%;
+  cursor: default;
+  pointer-events: none;
+}
+
+.button:disabled {
+  opacity: 70%;
+  cursor: default;
+  pointer-events: none;
+}
+
 .subscription-button {
   font-family: inherit;
   font-size: 20px;
@@ -516,16 +521,12 @@ img {
 }
 
 .page-footer {
-  color: #333333;
-}
-
-.page-footer-container {
-  display: grid;
-  grid-template-columns: 182px 720px 182px;
+  display: flex;
   width: 1200px;
-  margin: 0 auto;
-  padding: 38px 58px 40px 58px;
+  padding: 38px 50px 40px 58px;
   background-color: #ffffff;
+  justify-content: space-between;
+  color: #333333;
 }
 
 .footer-social-list {
@@ -534,6 +535,7 @@ img {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  width: 130px;
 }
 
 .footer-social-item {
@@ -600,6 +602,7 @@ img {
   -webkit-text-decoration-line: none;
           text-decoration-line: none;
   margin-top: 2px;
+  margin-left: 22px;
 }
 
 .contacts-phone:hover {
@@ -611,20 +614,21 @@ img {
 }
 
 .contacts-phone:focus {
+  border: none;
+  padding: 3px 12px;
   color: #756257;
   outline: #83b3d3 solid 3px;
   border-radius: 10px;
 }
 
 .htmlacademy-link {
-  position: relative;
+  padding: 26px 22px 9px;
 }
 
 .htmlacademy-icon {
-  position: absolute;
-  top: 5px;
-  left: 52px;
+  margin-top: 5px;
   fill: #000000;
+  border: none;
 }
 
 .htmlacademy-link:hover .htmlacademy-icon {
@@ -637,9 +641,12 @@ img {
 
 .htmlacademy-link:focus .htmlacademy-icon {
   fill: #756257;
+}
+
+.htmlacademy-link:focus {
+  border: none;
   outline: #83b3d3 solid 3px;
   border-radius: 10px;
-  outline-offset: 10px;
 }
 
 .modal-container {
@@ -985,7 +992,7 @@ img {
   background: url("../images/filter-background.jpg");
   background-repeat: no-repeat;
   background-color: #83b3fa;
-  background-size: 100% auto;
+  background-size: cover;
   color: #ffffff;
   padding: 37px 72px 84px;
   margin: 0;
@@ -1001,14 +1008,13 @@ img {
   font-weight: 700;
   margin: 0 auto;
   padding: 0;
-  height: 70px;
 }
 
 .breadcrumbs-list {
   position: relative;
   display: flex;
   align-items: center;
-  margin: 0;
+  margin: -7px 0 0;
   padding: 0;
   list-style-type: none;
   flex-wrap: wrap;
@@ -1018,13 +1024,13 @@ img {
 
 .breadcrumbs-item {
   position: relative;
-  margin-right: 21px;
+  margin-right: 17px;
 }
 
 .breadcrumbs-item::after {
   position: absolute;
   top: 7px;
-  right: -15px;
+  right: -12px;
   width: 8px;
   height: 8px;
   content: "";
@@ -1043,7 +1049,8 @@ img {
   line-height: 21px;
   color: #ffffff;
   text-decoration: none;
-  padding: 0 3px;
+  padding: 0 5px;
+  transform: translateX(-4px);
 }
 
 .breadcrumbs-link:hover {
@@ -1137,6 +1144,12 @@ img {
 .control:focus .control-mark-radio {
   background-color: #ffffff;
   outline: #83b3d3 solid 3px;
+}
+
+.control-input:disabled + .control-mark {
+  opacity: 70%;
+  cursor: default;
+  pointer-events: none;
 }
 
 .catalog-filter-list {
@@ -1237,6 +1250,12 @@ img {
   background: #756257;
 }
 
+.range-input:disabled {
+  opacity: 70%;
+  cursor: default;
+  pointer-events: none;
+}
+
 .range-scale {
   position: relative;
   height: 4px;
@@ -1245,6 +1264,7 @@ img {
 
 .range-bar {
   position: absolute;
+  width: 227px;
   height: 4px;
   background-color: #ffffff;
 }
@@ -1280,7 +1300,6 @@ img {
   width: 160px;
   text-align: center;
   align-self: end;
-  padding-top: 59px;
 }
 
 .control-input {
