--- a/styles/styles.css
+++ b/styles/styles.css
@@ -474,15 +474,18 @@ img {
   outline: #83b3d3 solid 3px;
 }
 
-.input:invalid {
-  background-color: #ffffff;
-  outline: #ff5757 solid 2px;
-}
-
 .field:disabled {
   opacity: 70%;
   cursor: default;
   pointer-events: none;
+}
+
+.field:invalid {
+  box-shadow: none;
+}
+
+.field:focus:invalid {
+  outline: #ff5757 solid 2px;
 }
 
 .button:disabled {
@@ -1072,6 +1075,13 @@ img {
 
 .catalog-filter-form {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.catalog-filter-box {
+  display: flex;
+  width: 434px;
+  flex-wrap: wrap;
 }
 
 .catalog-filter-group {
@@ -1080,6 +1090,12 @@ img {
   padding: 0;
   padding-right: 19px;
   width: 217px;
+  margin-bottom: 30px;
+}
+
+.catalog-filter-group:nth-last-child(1),
+.catalog-filter-group:nth-last-child(2) {
+  margin-bottom: 0;
 }
 
 .control {
@@ -1168,6 +1184,7 @@ img {
   padding: 0;
   margin-left: auto;
   margin-right: 81px;
+  align-self: end;
 }
 
 .catalog-filter-title {
@@ -1260,6 +1277,7 @@ img {
   position: relative;
   height: 4px;
   background-color: rgba(255, 255, 255, 0.3);
+  margin-bottom: 10px;
 }
 
 .range-bar {
@@ -1628,11 +1646,23 @@ img {
 
 .hotel-card-stars {
   align-self: center;
-  margin-right: 7px;
+  background-repeat: no-repeat;
+  height: 17px;
 }
 
-.hotel-card-stars:nth-last-child(2) {
-  margin-right: 0;
+.stars-two {
+  background-image: url("../images/stars2.svg");
+  width: 43px;
+}
+
+.stars-three {
+  background-image: url("../images/stars3.svg");
+  width: 68px;
+}
+
+.stars-four {
+  background-image: url("../images/stars4.svg");
+  width: 91px;
 }
 
 .rating-number {
@@ -1759,7 +1789,7 @@ img {
   width: 160px;
   height: 44px;
   padding: 0 48px 0 17px;
-  background-image: url("../images/dropdown.svg");
+  background: url("../images/dropdown.svg");
   background-repeat: no-repeat;
   background-position: right 21px center;
   -webkit-appearance: none;
